--- a/index.html
+++ b/index.html
@@ -133,11 +133,13 @@
     </section>
   </main>
   <footer class="footer">
+    <div class="container">
     <a href="" class="footer-logo">
         Web
         <span class="footer_logo_studio">Studio</span>
     </a>
     <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
   </footer>
 </body>
 </html>
