--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header class="header">
-    
+    <div class="container">
     <nav class="header_nav">
 
     <a href="./index.html" class="header-logo">
@@ -26,7 +26,7 @@
         <span class="header_logo_studio">Studio</span>
     </a>
 
-    <ul class="header_menu_list_a">     
+    <ul class="header_menu_list_menu">     
         <li><a href="./index.html" class="header_menu_list_a">Studio</a></li>
         <li><a href="" class="header_menu_list_a">Portfolio</a></li>
         <li><a href="" class="header_menu_list_a">Contacts</a></li>
@@ -40,7 +40,7 @@
             <li ><a href="" class="header-menu-item-a">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
-
+    </div>
   </header>
   <main>
     <section class="hero">
