--- a/index.html
+++ b/index.html
@@ -44,32 +44,36 @@
   </header>
   <main>
     <section class="hero">
+        <div class="container">
         <h1 class="hero-title">Effective Solutions
             for Your Business
         </h1>
         <button type="button" class="hero-btm">Order Service</button>
+        </div>
     </section>
     <section class="strategy">
+        <div class="container">
         <h2 class="Logo_strategy">Strategy</h2>
-        <ul>
-            <li>
+        <ul class="strategy_ul">
+            <li class="strategy_li">
                 <h3 class="strategy-h">Strategy</h3>
                 <p class="strategy_p">Our goal is to identify the business
                     problem to walk away with the perfect and creative solution. </p>
             </li>
-            <li>
+            <li class="strategy_li">
                 <h3 class="strategy-h">Punctuality</h3>
                 <p class="strategy_p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li>
+            <li class="strategy_li">
                 <h3 class="strategy-h">Diligence</h3>
                 <p class="strategy_p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li>
+            <li class="strategy_li">
                 <h3 class="strategy-h">Technologies</h3>
                 <p class="strategy_p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
+        </div>
     </section>
     <section class="team">
         <h2 class="logo_team">Our Team</h2>
