--- a/index.html
+++ b/index.html
@@ -76,64 +76,88 @@
         </div>
     </section>
     <section class="team">
+        <div class="container">
         <h2 class="logo_team">Our Team</h2>
-        <ul>
+        <ul class="team_ul">
             <li class="team_li">
+                <div class="team_div">
                 <img src="./images/img.jpg" alt="">
                 <h3 class="team_h">Mark Guerrero</h3>
                 <p class="team_p">Product Designer</p>
+                </div>
             </li>
             <li class="team_li">
+                <div class="team_div">
                 <img src="./images/img(1).jpg" alt="">
                 <h3 class="team_h">Tom Ford</h3>
                 <p class="team_p">Frontend Developer</p>
+                </div>
             </li>
             <li class="team_li">
+                <div class="team_div">
                 <img src="./images/img(2).jpg" alt="">
                 <h3 class="team_h">Camila Garcia</h3>
                 <p class="team_p">Marketing</p>
+                </div>
             </li>
             <li class="team_li">
+                <div class="team_div">
                 <img src="./images/img(3).jpg" alt="">
                 <h3 class="team_h">Daniel Wilson</h3>
                 <p class="team_p">UI Designer</p>
+                </div>
             </li>
         </ul>
+        </div>
     </section>
-    <section>
-        <h2 class="portfolio">Our Portfolio</h2>
-        <ul>
-            <li>
+    <section class="portfolio">
+        <div class="container">
+        <h2 class="portfolio_logo">Our Portfolio</h2>
+        <ul class="portfolio_ul">
+            <li class="portfolio_li">
+                <div class="portfolio_div">
                 <img src="./images/img4.jpg" alt="." width="360">
                 <h3 class="portfolio_h">Banking App</h3>
                 <p class="portfolio-p">App</p>
+                </div>
             </li>
-            <li>
+            <li class="portfolio_li">
+                <div class="portfolio_div">
                 <img src="./images/img5.jpg" alt="." width="360">
                 <h3 class="portfolio_h">Cashless Payment</h3>
                 <p class="portfolio-p">Marketing</p>
+                </div>
             </li>
-            <li>
+            <li class="portfolio_li">
+                <div class="portfolio_div">
                 <img src="./images/img6.jpg" alt="." width="360">
                 <h3 class="portfolio_h">Meditation App</h3>
                 <p class="portfolio-p">App</p>
+                </div>
             </li>
-            <li>
+            <li class="portfolio_li">
+                <div class="portfolio_div">
                 <img src="./images/img7.jpg" alt="." width="360">
                 <h3 class="portfolio_h">Taxi Service</h3>
                 <p class="portfolio-p">Marketing</p>
+                </div>
             </li>
-            <li>
+            <li class="portfolio_li">
+                <div class="portfolio_div">
                 <img src="./images/img8.jpg" alt="." width="360">
                 <h3 class="portfolio_h">Screen Illustrations</h3>
                 <p class="portfolio-p">Design</p>
+                </div>
             </li>
-            <li>
+            <li class="portfolio_li">
+                <div class="portfolio_div">
                 <img src="./images/img9.jpg" alt="." width="360">
                 <h3 class="portfolio_h">Online Courses</h3>
                 <p class="portfolio-p">Marketing</p>
+                </div>
             </li>
         </ul>
+        </div>
     </section>
   </main>
   <footer class="footer">
