--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
     <section class="strategy">
         <div class="container">
-        <h2 class="Logo_strategy">Strategy</h2>
+        <h2 class="visually-hidden">Strategy</h2>
         <ul class="strategy_ul">
             <li class="strategy_li">
                 <h3 class="strategy-h">Strategy</h3>
