--- a/index.html
+++ b/index.html
@@ -166,11 +166,20 @@
   </main>
   <footer class="footer">
     <div class="container">
-    <a href="" class="footer-logo">
-        Web
-        <span class="footer_logo_studio">Studio</span>
-    </a>
-    <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="" class="footer-logo">
+            Web
+            <span class="footer_logo_studio">Studio</span>
+        </a>
+        <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
+    <div>
+        <p class="footer_p_div">Social media</p>
+        <ul class="footer_ul">
+            <li class="footer_li"><a href="" class="footer_a"></a></li>
+            <li class="footer_li"><a href="" class="footer_a"></a><a href=""></a><a href=""></a></li>
+            <li class="footer_li"><a href="" class="footer_a"></a><a href=""></a><a href=""></a></li>
+            <li class="footer_li"><a href="" class="footer_a"></a><a href=""></a><a href=""></a></li>
+        </ul>
     </div>
   </footer>
 </body>
