--- a/index.html
+++ b/index.html
@@ -165,21 +165,23 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="container">
-        <a href="" class="footer-logo">
-            Web
-            <span class="footer_logo_studio">Studio</span>
-        </a>
-        <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </div>
     <div>
-        <p class="footer_p_div">Social media</p>
-        <ul class="footer_ul">
-            <li class="footer_li"><a href="" class="footer_a"></a></li>
-            <li class="footer_li"><a href="" class="footer_a"></a><a href=""></a><a href=""></a></li>
-            <li class="footer_li"><a href="" class="footer_a"></a><a href=""></a><a href=""></a></li>
-            <li class="footer_li"><a href="" class="footer_a"></a><a href=""></a><a href=""></a></li>
-        </ul>
+        <div class="container">
+            <a href="" class="footer-logo">
+                Web
+                <span class="footer_logo_studio">Studio</span>
+            </a>
+            <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+        <div>
+            <p class="footer_p_div">Social media</p>
+            <ul class="footer_ul">
+                <li class="footer_li"><a href="" class="footer_a"></a></li>
+                <li class="footer_li"><a href="" class="footer_a"></a><a href=""></a><a href=""></a></li>
+                <li class="footer_li"><a href="" class="footer_a"></a><a href=""></a><a href=""></a></li>
+                <li class="footer_li"><a href="" class="footer_a"></a><a href=""></a><a href=""></a></li>
+            </ul>
+        </div>
     </div>
   </footer>
 </body>
