--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>
   </main>
   <footer class="footer">
-    <div>
+    <div class="container">
         <div class="container">
             <a href="" class="footer-logo">
                 Web
