--- a/index.html
+++ b/index.html
@@ -165,21 +165,22 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="container_footer">
+    <div class="container">
         <a href="" class="footer-logo">
             Web
             <span class="footer_logo_studio">Studio</span>
         </a>
         <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </div>
-    <div class="container_footer">
-        <p class="footer_p_div">Social media</p>
-        <ul class="footer_ul">
-            <li class="footer_li"><a href="" class="footer_a"></a></li>
-            <li class="footer_li"><a href="" class="footer_a"></a></li>
-            <li class="footer_li"><a href="" class="footer_a"></a></li>
-            <li class="footer_li"><a href="" class="footer_a"></a></li>
-        </ul>
+    
+        <div class="container_footer">
+            <p class="footer_p_div">Social media</p>
+            <ul class="footer_ul">
+                <li class="footer_li"><a href="" class="footer_a"></a></li>
+                <li class="footer_li"><a href="" class="footer_a"></a></li>
+                <li class="footer_li"><a href="" class="footer_a"></a></li>
+                <li class="footer_li"><a href="" class="footer_a"></a></li>
+            </ul>
+        </div>
     </div>
   </footer>
 </body>
