--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+
 
 
 </head>
@@ -172,15 +172,7 @@
         </a>
         <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     
-        <div class="container_footer">
-            <p class="footer_p_div">Social media</p>
-            <ul class="footer_ul">
-                <li class="footer_li"><a href="" class="footer_a"></a></li>
-                <li class="footer_li"><a href="" class="footer_a"></a></li>
-                <li class="footer_li"><a href="" class="footer_a"></a></li>
-                <li class="footer_li"><a href="" class="footer_a"></a></li>
-            </ul>
-        </div>
+    
     </div>
   </footer>
 </body>
